Fixed some layout issues

--- a/css/index.scss
+++ b/css/index.scss
@@ -264,9 +264,18 @@ button {
 }
 
 .ms-logo {
+  // padding: 12px 4px;
+  // margin-left: 12px;
+  // margin-top: 2px;
+  // try 1
+  position: absolute;
+  left: calc(50% - 60px);
+  margin: 1px;
+  margin-top: 3px;
   padding: 12px 4px;
-  margin-left: 12px;
-  margin-top: 2px;
+  float: none;
+  display: block;
+  height: auto;
 
   img {
     margin-top: -3px;
@@ -314,9 +323,10 @@ main {
 }
 
 .hero-banner {
+  display: flex;
   width: 100%;
-  height: 180px;
-  max-height: 580px;
+  height: 100%;
+  max-height: 100%;
 
   img {
     width: 100%;
@@ -674,6 +684,7 @@ main {
     align-items: center;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+    gap: 0.5rem;
 
     h3 {
       font-weight: 600;
@@ -687,6 +698,10 @@ main {
       font-size: 1rem;
       line-height: 1.5625rem;
     }
+  }
+
+  &.active button i {
+    transform: rotate(180deg);
   }
 
   &:first-child button {
@@ -1133,7 +1148,7 @@ main {
 }
 
 .story-card-container {
-  height: 731.93px;
+  // height: 731.93px;
   padding: 0.1875rem;
   scroll-snap-align: start;
   white-space: normal;
@@ -1157,7 +1172,7 @@ main {
       flex: 0 0 100%;
       width: 100%;
       max-width: 100%;
-      height: 219.68px;
+      height: auto;
       padding: 0 0.25rem;
       padding-inline: 0.5rem;
       padding-block: 0.5rem 0;
@@ -1166,7 +1181,7 @@ main {
 
       img {
         width: 100%;
-        height: 219.68px;
+        height: 100%;
         object-fit: cover;
         border-radius: 0.5rem;
       }
@@ -1248,7 +1263,7 @@ main {
             list-style: none;
             flex-wrap: wrap;
             justify-content: flex-start;
-            gap: 0.75rem;
+            gap: 0.5rem;
 
             li {
               flex-basis: auto;
